<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="#aaa"
tools:context="com.example.user.calculatorapp.MainActivity"
android:id="@+id/relativeLayout_ID">

<TextView
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="0"
    android:id="@+id/screenOutput_ID"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:background="#fff"
    android:layout_marginTop="31dp"
    android:gravity="end"
    android:textSize="50dip" />

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/screenOutput_ID"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="57dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1_string"
        android:id="@+id/button1_ID"
        android:layout_row="0"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2_string"
        android:id="@+id/button2_ID"
        android:layout_row="0"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3_string"
        android:id="@+id/button3_ID"
        android:layout_row="0"
        android:layout_column="2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAdd_string"
        android:id="@+id/buttonAdd_ID"
        android:layout_row="0"
        android:layout_column="3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4_string"
        android:id="@+id/button4_ID"
        android:layout_row="1"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5_string"
        android:id="@+id/button5_ID"
        android:layout_row="1"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6_string"
        android:id="@+id/button6_ID"
        android:layout_row="1"
        android:layout_column="2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSub_string"
        android:id="@+id/buttonSub_ID"
        android:layout_row="1"
        android:layout_column="3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button7_string"
        android:id="@+id/button7_ID"
        android:layout_row="2"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button8_string"
        android:id="@+id/button8_ID"
        android:layout_row="2"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button9_string"
        android:id="@+id/button9_ID"
        android:layout_row="2"
        android:layout_column="2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonMult_string"
        android:id="@+id/buttonMult_ID"
        android:layout_row="2"
        android:layout_column="3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDecimal_string"
        android:id="@+id/buttonDecimal_ID"
        android:layout_row="3"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button0_string"
        android:id="@+id/button0_ID"
        android:layout_row="3"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEquals_string"
        android:id="@+id/buttonEquals_ID"
        android:layout_row="3"
        android:layout_column="2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDiv_string"
        android:id="@+id/buttonDiv_ID"
        android:layout_row="3"
        android:layout_column="3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonClear_string"
        android:id="@+id/buttonClear_ID"
        android:layout_row="4"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNeg_string"
        android:id="@+id/buttonNeg_ID"
        android:layout_row="4"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSqrt_string"
        android:id="@+id/buttonSqrt_ID"
        android:layout_row="4"
        android:layout_column="2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonExp_string"
        android:id="@+id/buttonExp_ID"
        android:layout_row="4"
        android:layout_column="3" />
</GridLayout>

</RelativeLayout>
